# numpy-mlir

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/modules/: NpcCommon.cmake
include/: CMakeLists.txt  InitAll.h
include/Conversion/: CMakeLists.txt  Passes.td
include/Conversion/BasicpyToStd/: Passes.h  Patterns.h
include/Conversion/NumpyToTCF/: Passes.h
include/Conversion/TCFToTCP/: Passes.h
include/Conversion/TCPToLinalg/: Passes.h
include/Dialect/: CMakeLists.txt  Common.h
include/Dialect/Basicpy/IR/: BasicpyDialect.h  BasicpyDialect.td  BasicpyOps.h  BasicpyOps.td
include/Dialect/Basicpy/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/Npcrt/IR/: CMakeLists.txt  NpcrtBase.td  NpcrtDialect.h  NpcrtOps.h  NpcrtOps.td
include/Dialect/Numpy/IR/: CMakeLists.txt  NumpyDialect.h  NumpyDialect.td  NumpyOps.h  NumpyOps.td
include/Dialect/Numpy/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/TCF/IR/: CMakeLists.txt  TCFBase.td  TCFDialect.h  TCFOps.h  TCFOps.td
include/Dialect/TCF/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/TCP/IR/: TCPBase.td  TCPDialect.h  TCPOps.h  TCPOps.td
include/E2E/: CMakeLists.txt  E2E.h  Passes.td
include/Typing/: CMakeLists.txt
include/Typing/Analysis/CPA/: Algorithm.h  CMakeLists.txt  Interfaces.h  Interfaces.td  Types.h
include/Typing/Support/: CPAIrHelpers.h
include/Typing/Transforms/: CMakeLists.txt  Passes.h  Passes.td
lib/: CMakeLists.txt  InitAll.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h
lib/Conversion/BasicpyToStd/: CMakeLists.txt  Passes.cpp  PrimitiveOpsConversion.cpp
lib/Conversion/NumpyToTCF/: CMakeLists.txt  Passes.cpp
lib/Conversion/TCFToTCP/: CMakeLists.txt  Passes.cpp
lib/Conversion/TCPToLinalg/: CMakeLists.txt  Passes.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Basicpy/IR/: BasicpyDialect.cpp  BasicpyOps.cpp  CMakeLists.txt
lib/Dialect/Basicpy/Transforms/: CMakeLists.txt  PassDetail.h  TypeInference.cpp
lib/Dialect/Npcrt/IR/: CMakeLists.txt  NpcrtDialect.cpp  NpcrtOps.cpp
lib/Dialect/Numpy/IR/: CMakeLists.txt  NumpyDialect.cpp  NumpyOps.cpp
lib/Dialect/Numpy/Transforms/: CMakeLists.txt  PassDetail.h  PublicFunctionsToTensor.cpp
lib/Dialect/TCF/IR/: CMakeLists.txt  TCFDialect.cpp  TCFOps.cpp
lib/Dialect/TCF/Transforms/: CMakeLists.txt  PassDetail.h  ShapeRefinement.cpp
lib/Dialect/TCP/IR/: CMakeLists.txt  TCPDialect.cpp  TCPOps.cpp
lib/E2E/: CMakeLists.txt  E2E.cpp  LowerRankedShapes.cpp  LowerToHybridTensorMemRef.cpp  LowerToNpcrtABI.cpp  PassDetail.h
lib/Typing/: CMakeLists.txt
lib/Typing/Analysis/: CMakeLists.txt
lib/Typing/Analysis/CPA/: Algorithm.cpp  CMakeLists.txt  Interfaces.cpp  Types.cpp
lib/Typing/Support/: CMakeLists.txt  CPAIrHelpers.cpp
lib/Typing/Transforms/: CMakeLists.txt  CPATypeInference.cpp  PassDetail.h
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/Conversion/BasicpyToStd/: basic.mlir
test/Conversion/NumpyToTCF/: builtin_ufunc_call.mlir
test/Conversion/TCFToTCP/: basic.mlir
test/Conversion/TCPToLinalg/: basic.mlir
test/Dialect/Basicpy/: canonicalize.mlir  functions.mlir  ops.mlir  slot_object.mlir  types_attrs.mlir
test/Dialect/Numpy/: canonicalizers.mlir  ops.mlir  public_function_to_tensor.mlir  type_attrs.mlir
test/Dialect/TCF/: ops.mlir
test/Dialect/TCP/: invalid.mlir  ops.mlir
test/E2E/: lower-alloc-memref-ops.mlir  lower-constant-tensors-to-memrefs.mlir  lower-linalg-tensor-to-memref.mlir  lower-ranked-shapes.mlir  lower-to-npcrt-abi.mlir  resolve-shape-of-ops.mlir  resolve-tensor-load-store-ops.mlir
tools/: CMakeLists.txt
tools/np-opt/: CMakeLists.txt  np-opt.cpp
tools/npc-opt/: CMakeLists.txt  npc-opt.cpp
